# OA4_price_formation

./: README.md  pyproject.toml
config/: settings.py  urls.py
price/: admin.py  models.py  serializers.py  tests.py  urls.py  validators.py  views.py
price/migrations/: 0001_initial.py  0002_alter_price_final_price.py  0003_alter_price_bank_comission_alter_price_final_price_and_more.py
users/: models.py  permissions.py  serializers.py  tests.py  views.py
users/management/commands/: ccsu.py
users/migrations/: 0001_initial.py  0002_user_is_trader.py
